Fixing overflow but on single photos

--- a/resources/css/style.less
+++ b/resources/css/style.less
@@ -15,11 +15,9 @@ html, body {
 
 	#page {
 		opacity: 0;
-		transform: translateY(16px);
 		transition: 1s all;
 
 		&.loaded {
-			transform: translateY(0);
 			opacity: 1;
 		}
 	}
